Modified installer and rtpsgen.bat